--- a/index.html
+++ b/index.html
@@ -41,7 +41,20 @@
                     </li>
             </ul> 
             </div>
-            
+        </section>
+        <section class="photo-grid">
+            <img src="./images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
+            <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Атхарва Тулси" class="photo-grid__item">
+            <img src="./images/photo-grid-tuman.jpg" alt="Туман и собака" class="photo-grid__item">
+            <img src="./images/photo-grid-sochi.jpg" alt="Лес Сочи" class="photo-grid__item">
+            <img src="./images/photo-grid-arisa.jpg" alt="Ариса" class="photo-grid__item">
+            <img src="./images/photo-grid-baikal.jpg" alt="Берег Байкала" class="photo-grid__item">
+            <img src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус" class="photo-grid__item">
+            <img src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo-grid__item">
+            <img src="./images/photo-grid-kamchatka-1.jpg" alt="Горы Камчатки" class="photo-grid__item">
+            <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вулкан Камчатки" class="photo-grid__item">
+            <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал" class="photo-grid__item">
+            <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
         </section>
     </main>  
     </div>
