--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <img src="./images/header-logo.svg" alt="Логотип" class="header__logo">
             <ul class="list header__lang-links">
                 <li>
-                    <a href="#" target="" class="link header__lang-link header__lang-link_active">Ru</a>
+                    <a href="#" target="_blank" class="link header__lang-link header__lang-link_active">Ru</a>
                 </li>
                 <li>
-                    <a href="#" target="" class="link header__lang-link">En</a>
+                    <a href="#" target="_blank" class="link header__lang-link">En</a>
                 </li>
             </ul>
         </header>
