Корректировка после ревью 2

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li>
                             <p class="intro__list-item">Часовых поясов <span class="intro__list-item-numeric">11</span>
                             </p>
-                            <p class="intro__list-item">Объектов природного наследия ЮНЕСКО<span
+                            <p class="intro__list-item">Объектов природного наследия ЮНЕСКО <span
                                     class="intro__list-item-numeric">12</span></p>
                             <p class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span
                                     class="intro__list-item-numeric">16</span></p>
@@ -162,7 +162,7 @@
             </section>
             <section class="cover">
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
-                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
                         на электричках.</p>
                 </a>
